--- a/Main/Src/CodeShare.Web/Views/Home/Index.cshtml
+++ b/Main/Src/CodeShare.Web/Views/Home/Index.cshtml
@@ -5,7 +5,7 @@
 }
 
 <div class="jumbotron">
-    <h1>CodeShare</h1><h1>Bamboo deployment test</h1>
+    <h1>CodeShare</h1>
     <p class="lead">Open collaboration powers <strong>everything</strong></p>
     <div class="row">
         <div class="col-md-4">
