--- a/Main/Src/CodeShare.Web/Views/Shared/_Layout.cshtml
+++ b/Main/Src/CodeShare.Web/Views/Shared/_Layout.cshtml
@@ -33,7 +33,7 @@
         @RenderBody()
         <hr />
         <footer>
-            <p>&copy; @DateTime.Now.Year - CodeShare | <a href="mailto:mario.moreno@globant.com">contact</a> | <a href="#">api</a></p>
+            <p>&copy; @DateTime.Now.Year - CodeShare | <a href="mailto:mario.moreno@globant.com&subject=CodeShare">contact</a> | <a href="#">api</a></p>
         </footer>
     </div>
 
